--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "proxypool",
   "description": "自动抓取tg频道、订阅地址、公开互联网上的ss、ssr、vmess节点信息，聚合去重测试可用性后提供节点列表",
-  "repository": "https://github.com/uoox/proxypool",
-  "logo": "https://raw.githubusercontent.com/uoox/proxypool/master/assets/proxy.jpg",
+  "repository": "https://github.com/liugc/proxypool",
+  "logo": "https://raw.githubusercontent.com/liugc/proxypool/master/assets/proxy.jpg",
   "keywords": ["golang", "ss", "ssr", "vmess", "shadowsocks", "shadowsocksr"]
 }
